<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRestaurant"
    android:id="@+id/addRestaurant"
    >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/location_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/place_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/location_address_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_name_textview"
        android:onClick="onLocationClicked"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_current_location_button"
        android:layout_width="@dimen/default_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_address_textview"
        android:text="@string/get_current_location"
        android:onClick="onGetCurrentLocation"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/show_on_map_button"
        android:layout_width="@dimen/default_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_current_location_button"
        android:text="@string/show_on_map"
        android:onClick="onShowOnMap"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="@dimen/default_button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onSaveClicked"/>


</androidx.constraintlayout.widget.ConstraintLayout>